--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@ Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>
 <li>Watching Videos</li>
 <li>Playing Softball</li>
 </ul>
+   Github directory:
+test.html   (   <a href="index.html">Return to Main Page</a>)
 </body>
 </html>
